--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prep": "npm run validate && npm run setup",
     "postinstall": "npm run prep",
     "build": "webpack",
-    "build-watch": "npm run build -- s-w",
+    "build-watch": "npm run build -- -w",
     "build-dev": "cross-env NODE_ENV=development npm run build-watch",
     "build-branch": "bin/build-branch.sh",
     "start": "node server/start.js",
