--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prep": "npm run validate && npm run setup",
     "postinstall": "npm run prep",
     "build": "webpack",
-    "build-watch": "npm run build -- s-w",
+    "build-watch": "npm run build -- -w",
     "build-dev": "cross-env NODE_ENV=development npm run build-watch",
     "build-branch": "bin/build-branch.sh",
     "start": "node server/start.js",
@@ -25,7 +25,7 @@
     "deploy-heroku": "bin/deploy-heroku.sh",
     "lint": "esw . --ignore-path .gitignore --ext '.js,.jsx'",
     "lint-watch": "npm run lint -- -w",
-    "prepush": "npm run lint"
+    "prepush": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
