--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test": "mocha --compilers js:babel-register --watch-extensions js,jsx app/**/*.test.js app/**/*.test.jsx server/**/*.test.js db/**/*.test.js",
     "test-watch": "npm run test -- --watch --reporter=min",
     "seed": "node db/seed.js",
-    "deploy-heroku": "bin/deploy-heroku.sh",
-    "prepush": "npm run test"
+    "deploy-heroku": "bin/deploy-heroku.sh"
   },
   "repository": {
     "type": "git",
