--- a/package.json
+++ b/package.json
@@ -85,9 +85,11 @@
     "react-bootstrap": "^0.31.0",
     "react-contenteditable": "^2.0.2",
     "react-dom": "^15.3.2",
+    "react-fetch": "0.0.9",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.23.3",
+    "react-stripe-checkout": "^2.4.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^2.7.0",
@@ -95,6 +97,7 @@
     "sequelize": "^3.24.6",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
+    "stripe": "^4.22.0",
     "supertest": "^3.0.0",
     "volleyball": "^1.4.1",
     "webpack": "^2.2.1",
